cleanup загрузки изображений